--- a/GraduationPJ/GraduationPJ/Info.plist
+++ b/GraduationPJ/GraduationPJ/Info.plist
@@ -26,6 +26,22 @@
 				<string>qupao</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>tencent </string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tencent1108733927</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string></string>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
