--- a/GraduationPJ/GraduationPJ/AppEntry/Info.plist
+++ b/GraduationPJ/GraduationPJ/AppEntry/Info.plist
@@ -2,18 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>定位授权</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>定位授权</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>定位授权</string>
-	<key>NSMotionUsageDescription</key>
-	<string>记步权限</string>
-	<key>NSHealthUpdateUsageDescription</key>
-	<string>visit &quot;Health&quot; and read the data</string>
-	<key>NSHealthShareUsageDescription</key>
-	<string>visit &quot;Health&quot; and read the data</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -52,7 +40,11 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string></string>
+			<string>mqqopensdkapiV2</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>mqqopensdkapiV2</string>
+			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
@@ -64,6 +56,18 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSHealthShareUsageDescription</key>
+	<string>visit "Health" and read the data</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>visit "Health" and read the data</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>定位授权</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>定位授权</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>定位授权</string>
+	<key>NSMotionUsageDescription</key>
+	<string>记步权限</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
