--- a/GraduationPJ/Podfile
+++ b/GraduationPJ/Podfile
@@ -4,8 +4,8 @@
 target 'GraduationPJ' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
-  # pod 'AMap3DMap' #3D地图SDK
-   pod 'AMap2DMap' #2D地图SDK (2D和3D不能同时使用)
+   pod 'AMap3DMap' #3D地图SDK
+#   pod 'AMap2DMap' #2D地图SDK (2D和3D不能同时使用)
    pod 'AMapSearch' #搜索功能
   # Pods for GraduationPJ
 
