--- a/GraduationPJ/Podfile
+++ b/GraduationPJ/Podfile
@@ -7,6 +7,8 @@ target 'GraduationPJ' do
    pod 'AMap3DMap' #3D地图SDK
 #   pod 'AMap2DMap' #2D地图SDK (2D和3D不能同时使用)
    pod 'AMapSearch' #搜索功能
+   pod 'MJExtension'
+   pod 'SocketRocket'
   # Pods for GraduationPJ
 
 end
