--- a/QPServer/QPServer.xcodeproj/xcshareddata/xcschemes/QPServer-Package.xcscheme
+++ b/QPServer/QPServer.xcodeproj/xcshareddata/xcschemes/QPServer-Package.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0940"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "WebSocketsServer::WebSocketsServer"
-               BuildableName = "WebSocketsServer"
-               BlueprintName = "WebSocketsServer"
-               ReferencedContainer = "container:WebSocketsServer.xcodeproj">
+               BlueprintIdentifier = "QPServer::QPServer"
+               BuildableName = "QPServer"
+               BlueprintName = "QPServer"
+               ReferencedContainer = "container:QPServer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,16 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "QPServer::QPServerTests"
+               BuildableName = "QPServerTests.xctest"
+               BlueprintName = "QPServerTests"
+               ReferencedContainer = "container:QPServer.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "WebSocketsServer::WebSocketsServer"
-            BuildableName = "WebSocketsServer"
-            BlueprintName = "WebSocketsServer"
-            ReferencedContainer = "container:WebSocketsServer.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -46,8 +47,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/closer/Desktop/&#x6bd5;&#x4e1a;&#x8bbe;&#x8ba1;/Perfect-WebSocketsServer"
+      useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
@@ -56,10 +56,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "WebSocketsServer::WebSocketsServer"
-            BuildableName = "WebSocketsServer"
-            BlueprintName = "WebSocketsServer"
-            ReferencedContainer = "container:WebSocketsServer.xcodeproj">
+            BlueprintIdentifier = "QPServer::QPServer"
+            BuildableName = "QPServer"
+            BlueprintName = "QPServer"
+            ReferencedContainer = "container:QPServer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -71,16 +71,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "WebSocketsServer::WebSocketsServer"
-            BuildableName = "WebSocketsServer"
-            BlueprintName = "WebSocketsServer"
-            ReferencedContainer = "container:WebSocketsServer.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
