--- a/WebSocketsServer/WebSocketsServer.xcodeproj/xcshareddata/xcschemes/WebSocketsServer.xcscheme
+++ b/WebSocketsServer/WebSocketsServer.xcodeproj/xcshareddata/xcschemes/WebSocketsServer.xcscheme
@@ -37,7 +37,8 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "NO"
+      useCustomWorkingDirectory = "YES"
+      customWorkingDirectory = "/Users/mac/Desktop/&#x4e34;&#x65f6;&#x6587;&#x4ef6;&#x5939;/GraduationPJ/WebSocketsServer"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
