--- a/GraduationPJ/GraduationPJ/AppEntry/Info.plist
+++ b/GraduationPJ/GraduationPJ/AppEntry/Info.plist
@@ -68,6 +68,10 @@
 	<string>定位授权</string>
 	<key>NSMotionUsageDescription</key>
 	<string>记步权限</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
